2002-12-01  Mikhael Goikhman  <migo@homemail.com>

	* libs/FBidi.c (FBidiConvert):
	several small changes
	* libs/FBidiJoin.c (shape_n_join):
	enabled a new bidi shaping code

2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c (frame_restore_client_gravities):
	(frame_free_move_resize_args):
	fixed a redrawing problem after shading a window

2002-11-29  olicha  <olivier.chapuis@free.fr>

	* acinclude.m4:
	Defined AM_PATH_PROG_WITH_TEST and re-enable it

	* configure.in:
	* Makefile.am:
	Fixed two missprints

2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/bindings.c (ParseBinding):
	fix for stroke-less compile

2002-11-29  olicha  <olivier.chapuis@free.fr>

	* fvwm/commands.h (enum):
	* fvwm/functable.c (func_table):
	* fvwm/builtins.c (CMD_LocalePath):
	* libs/FGettext.c (FGettextSetLocalePath):
	* libs/FGettext.h:
	Preparation for LocalePath command

	* fvwm/screen.h (ScreenInfo):
	* fvwm/fvwm.c (CreateGCs):
	Rename Scr.TileGC to Scr.BordersGC

	* acinclude.m4:
	A libintl autoconf fix

	* libs/Colorset.c (CreateBackgroundPixmap):
	Do not grab the server when we dump the E setroot pixmap

2002-11-29  olicha  <olivier.chapuis@free.fr>

	* acconfig.h:
	* fvwm/Makefile.am:
	* Makefile.am:
	* configure.in:
	* acinclude.m4:
	Added NLS support with gnu gettext

	* fvwm/fvwm.c (main):
	FGettextInit

	* fvwm/expand.c (expand_vars_extended):
	New extanded variable $[gt.any_string]

	* fvwm/virtual.c (CMD_DesktopName):
	* fvwm/windowlist.c (get_desk_title):
	* fvwm/expand.c (expand_vars_extended):
	* fvwm/fvwm.c (SetRCDefaults):
	* fvwm/ConfigFvwmSetup:
	Mark some strings to be translated

	* libs/FGettext.c (new file):
	* libs/FGettext.c (new file):
	* libs/Makefile.am:
	gnu gettext libintl warper

2002-11-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/add_window.c (RestoreWithdrawnLocation):
	rixed rxvts with S/E gravity travelling off screen upon recapture after
	they were resized.

	* fvwm/events.c (__handle_key_event):