@@ -21,6 +21,8 @@
 
 /* ---------------------------- included header files ----------------------- */
 
+#include <X11/Xmd.h>
+
 /* ---------------------------- global macros ------------------------------- */
 
 /* ---------------------------- type definitions ---------------------------- */
@@ -34,7 +36,7 @@
  * </description>
  */
 Bool PImageCreatePixmapFromArgbData(
-	Display *dpy, Window win, unsigned char *data, int start, int width,
+	Display *dpy, Window win, CARD32 *data, int start, int width,
 	int height, Pixmap pixmap, Pixmap mask, Pixmap alpha, int *have_alpha,
 	int *nalloc_pixels, Pixel **alloc_pixels, int *no_limit,
 	FvwmPictureAttributes fpa);
